remove some guava use