@@ -15,11 +15,6 @@
  */
 package com.google.auto.common;
 
-import com.google.common.base.Verify;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
-
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.Modifier;
@@ -36,6 +31,8 @@ import javax.lang.model.util.ElementFilter;
 import javax.lang.model.util.Elements;
 import javax.lang.model.util.SimpleTypeVisitor8;
 import javax.lang.model.util.Types;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -223,9 +220,9 @@ abstract class Overrides {
          * implements List<E>}. The parameter types are erased since the purpose of this method is to
          * determine whether two methods are candidates for one to override the other.
          */
-        ImmutableList<TypeMirror> erasedParameterTypes(ExecutableElement method, TypeElement in) {
+        List<TypeMirror> erasedParameterTypes(ExecutableElement method, TypeElement in) {
             if (method.getParameters().isEmpty()) {
-                return ImmutableList.of();
+                return List.of();
             }
             return new TypeSubstVisitor().erasedParameterTypes(method, in);
         }
@@ -247,19 +244,19 @@ abstract class Overrides {
              * mappings for all the variables we see. We could equivalently create a new map for each type
              * we visit, but this is slightly simpler and probably about as performant.
              */
-            private final Map<TypeParameterElement, TypeMirror> typeBindings = Maps.newLinkedHashMap();
+            private final Map<TypeParameterElement, TypeMirror> typeBindings = new LinkedHashMap<>();
 
-            ImmutableList<TypeMirror> erasedParameterTypes(ExecutableElement method, TypeElement in) {
+            List<TypeMirror> erasedParameterTypes(ExecutableElement method, TypeElement in) {
                 if (method.getEnclosingElement().equals(in)) {
-                    ImmutableList.Builder<TypeMirror> params = ImmutableList.builder();
+                    List<TypeMirror> params = new ArrayList<>();
                     for (VariableElement param : method.getParameters()) {
                         params.add(typeUtils.erasure(visit(param.asType())));
                     }
-                    return params.build();
+                    return params;
                 }
                 // Make a list of supertypes we are going to visit recursively: the superclass, if there
                 // is one, plus the superinterfaces.
-                List<TypeMirror> supers = Lists.newArrayList();
+                List<TypeMirror> supers = new ArrayList<>();
                 if (in.getSuperclass().getKind() == TypeKind.DECLARED) {
                     supers.add(in.getSuperclass());
                 }
@@ -273,11 +270,11 @@ abstract class Overrides {
                         // Either the formal type arguments are also empty or `declared` is raw.
                         actuals = formals.stream().map(t -> t.getBounds().get(0)).collect(toList());
                     }
-                    Verify.verify(actuals.size() == formals.size());
+                    Preconditions.checkState(actuals.size() == formals.size());
                     for (int i = 0; i < actuals.size(); i++) {
                         typeBindings.put(formals.get(i), actuals.get(i));
                     }
-                    ImmutableList<TypeMirror> params = erasedParameterTypes(method, element);
+                    List<TypeMirror> params = erasedParameterTypes(method, element);
                     if (params != null) {
                         return params;
                     }
@@ -309,7 +306,7 @@ abstract class Overrides {
                 if (t.getTypeArguments().isEmpty()) {
                     return t;
                 }
-                List<TypeMirror> newArgs = Lists.newArrayList();
+                List<TypeMirror> newArgs = new ArrayList<>();
                 for (TypeMirror arg : t.getTypeArguments()) {
                     newArgs.add(visit(arg));
                 }
@@ -346,13 +343,13 @@ abstract class Overrides {
             TypeElement methodContainer = MoreElements.asType(method.getEnclosingElement());
             Preconditions.checkArgument(methodContainer.getKind().isInterface());
             TypeMirror methodContainerType = typeUtils.erasure(methodContainer.asType());
-            ImmutableList<TypeElement> types = ImmutableList.of(in);
+            List<TypeElement> types = List.of(in);
             // On the first pass through this loop, `types` is the type we're starting from,
             // which might be a class or an interface. On later passes it is a list of direct
             // superinterfaces we saw in the previous pass, but only the ones that were assignable
             // to the interface that `method` appears in.
             while (!types.isEmpty()) {
-                ImmutableList.Builder<TypeElement> newTypes = ImmutableList.builder();
+                List<TypeElement> newTypes = new ArrayList<>();
                 for (TypeElement t : types) {
                     TypeMirror candidateType = typeUtils.erasure(t.asType());
                     if (typeUtils.isAssignable(candidateType, methodContainerType)) {
@@ -369,7 +366,7 @@ abstract class Overrides {
                         }
                     }
                 }
-                types = newTypes.build();
+                types = newTypes;
             }
             return null;
         }
@@ -409,12 +406,12 @@ abstract class Overrides {
             }
         }
 
-        private ImmutableList<TypeElement> superinterfaces(TypeElement type) {
-            ImmutableList.Builder<TypeElement> types = ImmutableList.builder();
+        private List<TypeElement> superinterfaces(TypeElement type) {
+            List<TypeElement> types = new ArrayList<>();
             for (TypeMirror sup : type.getInterfaces()) {
                 types.add(MoreElements.asType(typeUtils.asElement(sup)));
             }
-            return types.build();
+            return types;
         }
 
         private TypeElement asTypeElement(TypeMirror typeMirror) {
